kubernetes/TOOLS/istio/04_security_and_policy/authorization_policies/examples/allow_from_service_account.yaml

# ALLOW TRAFFIC ONLY FROM SPECIFIC SERVICE ACCOUNT
# This policy allows traffic only from a specific Kubernetes service account (my-service-account) to the service running with the app: my-service label.
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-account-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: my-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/default/sa/my-service-account

---

# - Allows requests from the reviews service account.
# - Only GET requests to /product are permitted.

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-productpage
  namespace: default
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/reviews"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/product"]

---
